# aim_assistant

./: CMakeLists.txt  README.md  package.xml  rosbag_downloader.sh
config/: aim_assistant_param.yaml
demo_bag/moving_with_livox/: metadata.yaml
demo_bag/stopping_with_livox/: metadata.yaml
include/aim_assistant/: aim_assistant_component.hpp  aim_assistant_exceptions.hpp  field_info.hpp  kalman_filter.hpp  low_pass_filter.hpp  vector2.hpp
launch/: aim_assistant_demo.launch.py
rviz/: demo.rviz
src/: aim_assistant_component.cpp  main.cpp
